--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "semver": "^7.6.3"
+  },
+  "scripts": {
+    "start": "NODE_TLS_REJECT_UNAUTHORIZED='0' bun ."
   }
 }
